<resources>
    <string name="app_name">随身小助手</string>
    <string name="xw_ptr_pull_to_refresh">下拉刷新</string>
    <string name="xw_ptr_release_to_refresh">释放立即刷新</string>
    <string name="xw_ptr_refreshing">正在刷新…</string>
    <string name="xw_ptr_refresh_succeeded">刷新成功</string>
    <string name="xw_ptr_refresh_failed">刷新失败</string>
    <string name="xw_ptr_pull_up_to_load">上拉加载更多</string>
    <string name="xw_ptr_release_to_load">释放立即加载</string>
    <string name="xw_ptr_loading">正在加载…</string>
    <string name="xw_ptr_load_succeeded">加载成功</string>
    <string name="xw_ptr_load_failed">加载失败</string>
    <string name="has_no_data">还没有数据</string>

    <string name="appzhuozhe">作者：张显林</string>
    <string name="appbanbenhao">版本：2.0</string>
    <string name="appfaburiqi">发布日期：2016-11-11</string>






    -<string name="agree_user_agreement">确认注册：表示你已经<u>阅读并同意用户使用协议</u></string>
    <string name="agreement1"><b>一、用户注册和使用须知：</b> \n1. 您必须保证在申请"随身小助手"服务时注册身份的真实性、合法性、有效性及完整性，当资料发生变化时，您应及时修改注册信息，随声小助手有权核实您填写的注册信息。当注册信息中的联系方式无效，因而随身小助手后台维护人员无法与您取得联系，导致您在使用“随身小助手”服务过程中产生任何损失或增加费用的，应由您独自承担。 \n2. 您申请注册的“随身小助手”用户名不得侵犯或涉嫌侵犯其他自然人、法人或社会组织的合法权益。 \n3. 您拥有“随身小助手”的注册申请权，随身小助手产品拥有者拥有对“随身小助手”主人资格的审核权和审核解释权。 \n4. 随身小助手后台为每个“随身小助手”提供唯一的用户名。当您的账户设立完成后，您应当在此后120日内使用您的用户名和密码登录“随身小助手”。逾期未登录的，随身小助手有权终止服务，注销您的账户。账户注销后，相应的用户名将开放给其他用户注册使用。为保证账号使用的有效性，随身小助手后台有权不定期清理非活跃账号。 \n5. 在完成“随身小助手”的用户注册申请程序后，您应注意保护账号及密码的安全。随身小助手后台无法对未经授权使用您帐号及密码登录的行为做出甄别。因您未保管好自己的账号和密码而引发您或第三方的损失，您将承担全部责任。 \n6. 除非有法律规定或司法裁定，且征得影讯网的同意，否则，您的“影讯小站”用户名和密码不得以任何方式转让或赠与他人。 \n7. 如果发现任何人不当使用您的“随身小助手”账户或有任何其他可能危及您的账户安全的情形时，您应当立即以有效方式通知随身小助手后台维护人员，寻求合理的解决方式。请理解后台维护人员对您的请求采取行动需要合理时间。 \n8. 您只能通过随身小助手提供的合法通道登录使用“随身小助手”。用户不得通过其他未经随身小助手授权的包括但不限于网页、非法兼容型软件、程序或者其他非许可的方式登录使用“随身小助手”。 </string> \n
    <string name="agreement2"><b>二、知识产权条款：</b> \n1. 对于您在“随身小助手”中提供的内容，您应享有您所实施行为所必需的全部权利或被授权（包括但不限于著作权、商标权等）。任何经由“随身小助手”传送的资讯、资料、文字、软件、音乐、音讯、照片、图形、视讯、信息、用户的登记资料或其他资料等（以下简称“内容”），无论公开还是私下传送，均由内容提供者承担责任。：本网站中特有的图形、标志、页面风格、程序、功能、版面编排方式、文字、图片、音乐、动画、视频、图表、数据等。任何媒体、网站或个人未经影讯网授权不得复制、模仿或以其他方式侵犯影讯网的知识产权。 </string> \n
    <string name="agreement3"><b>三、商业条款：</b> \n1.1. 随身小助手有权在用户申请的“随身小助手”产品中投放商业推广信息（包括但不限于商业广告、推广链接或其他推广形式。）随身小助手定义的商业推广信息内容包括但不限于文字、软件、声音、相片、录像、图表等；所有这些内容受广告法、知识产权法等相关法律的保护，因此用户只能在随身小助手和广告商授权下才能使用这些内容，而不能擅自复制、修改、引用这些内容、或创造与内容有关的衍生产品。 </string>
    <string name="agreement4"><b>四、免责条款：</b> \n1. 随身小助手保留为维修保养、系统升级或其他目的而暂停“随身小助手”服务的权利。 \n2. 用户使用“随身小助手”时可能会受到外部环境中不稳定因素的影响，影讯网无法提供以下任何保证：包括但不限于信息能否及时、准确以及有效的传送，网络服务的及时性、安全性、真实性以及无差错，服务一定能满足用户要求，服务不会中断，在接受影讯的服务时用户设备免于病毒程序的攻击。对于不可抗力或非影讯过错原因导致的用户数据损失、丢失或服务停止，影讯将不承担任何责任。 \n3. 对使用“随身小助手”服务而引发的任何用户之间的纠纷，影讯网将无须承担责任。 </string>
    <string name="agreement5"><b>五、适用法律及争议解决：</b> \n1. 本协议条款的解释，效力及纠纷的解决，适用于中华人民共和国法律（包括但不限于《中华人民共和国宪法》、《中华人民共和国合同法》、《中华人民共和国电信条例》、《互联网信息服务管理办法》、《互联网电子公告服务管理规定》、《中华人民共和国保守国家秘密法》、《全国人民代表大会常务委员会关于维护互联网安全的决定》、《中华人民共和国计算机信息系统安全保护条例》、《计算机信息网络国际联网安全保护管理办法》、《中华人民共和国著作权法》及其实施条例、《互联网著作权行政保护办法》等。）。 \n2. 影讯网保留判定用户的行为是否符合本服务条款的要求的权利，如果用户违背了本服务条款的规定，随身小助手有权中止或者终止服务。若用户和随身小助手之间发生任何争议或纠纷，首先应协商解决，协商不成的，用户在此同意将纠纷或争议提交北京仲裁委员会仲裁裁决。 \n3.随身小助手拥有对本协议中全部条款内容的解释权及修改权。</string>
</resources>
