<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@mipmap/ciyibackpic"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <RelativeLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:padding="5dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/agreement_cancel"
            android:background="@drawable/chevrondoubleleft"/>
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/agreement_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="用户使用协议"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agreement1"/>
            <TextView
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agreement2"/>
            <TextView
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agreement3"/>
            <TextView
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agreement4"/>
            <TextView
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agreement5"/>
       </LinearLayout>
    </ScrollView>

</LinearLayout>
